# KNN_classifier

./: CMakeLists.txt  README.md  makefile
Client/: AbstractOperations.cpp  AbstractOperations.h  AlgorithmSettingOp.cpp  ClientManagement.cpp  ClientManagement.h  ClientValidation.cpp  ClientValidation.h  DisplayResult.cpp  main.cpp
Client/DataAndCalcs/: ClientValidation.cpp  ClientValidation.h
Client/Flow/: ClientManagement.cpp  ClientManagement.h
Client/Operations/: AbstractOperations.cpp  AbstractOperations.h  AlgorithmSettingOp.cpp  AlgorithmSettingOp.h  DisplayResult.cpp  DisplayResult.h  DownloadOp.cpp  DownloadOp.h  UploadFilesOp.cpp  UploadFilesOp.h
IO/: AbstractDefaultIO.cpp  AbstractDefaultIO.h  SocketCreator.cpp  SocketCreator.h  SocketIO.cpp  SocketIO.h  StandardIO.cpp  StandardIO.h
Server/: AbstractDefaultIO.cpp  AbstractDefaultIO.h  AlgorithmSetting.h  ClassifiedRelativeVector.cpp  ClassifiedRelativeVector.h  Commander.cpp  Commander.h  DataProcessing.cpp  DataProcessing.h  RelativeDatabase.cpp  RelativeDatabase.h  RelativeVector.cpp  ServerValidations.cpp  ServerValidations.h  StandardIO.cpp  StandardIO.h  UploadFile.cpp  UploadFile.h  main.cpp
Server/Commands/: AlgorithmSetting.cpp  AlgorithmSetting.h  ClassifyData.cpp  ClassifyData.h  Commander.cpp  Commander.h  EndConnection.cpp  EndConnection.h  SendData.cpp  SendData.h  SendToDownload.cpp  SendToDownload.h  UploadFile.cpp  UploadFile.h
Server/DataAndAssistance/: ClassifiedRelativeVector.cpp  ClassifiedRelativeVector.h  DataProcessing.cpp  DataProcessing.h  KnnAlgorithm.cpp  KnnAlgorithm.h  RelativeDatabase.cpp  RelativeDatabase.h  RelativeVector.cpp  RelativeVector.h  ServerValidations.cpp  ServerValidations.h
Server/Distances/: AbstractDistance.cpp  AbstractDistance.h  Canberra.cpp  Canberra.h  Chebyshev.cpp  Chebyshev.h  Euclidean.cpp  Euclidean.h  Minkowski.cpp  Minkowski.h  Taxicab.cpp  Taxicab.h
Server/IO/: AbstractDefaultIO.h  CLI.cpp  CLI.h  StandardIO.cpp
Server/ServerFlow/: CLI.cpp  CLI.h  ServerManager.cpp  ServerManager.h
